fix(gui): Fix cramped instance list tabs

--- a/gui/src/pages/instance/InstanceList.css
+++ b/gui/src/pages/instance/InstanceList.css
@@ -4,7 +4,7 @@
 
 #instance-list-top {
 	display: grid;
-	grid-template-columns: minmax(0, 1fr) minmax(0, 1.5fr) minmax(0, 1fr);
+	grid-template-columns: minmax(0, 1fr) minmax(0, 1.75fr) minmax(0, 1fr);
 }
 
 .instance-list-section-container {
